# clippy

./: Cargo.toml  LICENSE  README.md  makefile
benches/: clipboard_latency.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  daemonize.rs  lib.rs  signals.rs
crates/daemon/tests/: daemon_tests.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs  traits.rs
crates/monitor/src/backend/: mod.rs  x11.rs
crates/monitor/tests/: monitor_tests.rs
crates/syscalls/: Cargo.toml  build.rs
crates/syscalls/asm/: syscall.asm
crates/syscalls/src/: lib.rs  safe.rs
crates/syscalls/tests/: syscall_tests.rs
crates/telemetry/src/: lib.rs  metrics.rs  sink.rs
crates/telemetry/tests/: telemetry_tests.rs
src/: main.rs
tests/: backend_tests.rs  namespace_tests.rs
